--- a/source/stylesheets/campo-ui/_toolbar.css.scss
+++ b/source/stylesheets/campo-ui/_toolbar.css.scss
@@ -35,5 +35,5 @@ body.with-fixed-toolbar {
 }
 
 .toolbar-action + .toolbar-title {
-  padding: em(12) em(20);
+  padding-left: em(20);
 }
